@@ -73,6 +73,7 @@ A Classic Fairytale:
  + Mission 2, Mission 5: Reduce computer hog levels
  * Fix incorrect storytelling in mission descriptions
  * Mission 1: Fix error message spam when Leaks a Lot drowns
+ * Mission 3: Fix cannibals sometimes doing nothing for a full turn
  * Mission 6: Fix cyborgs sometimes doing nothing for a full turn
 
 Missions:
